tiny fix
changed the dark mode to retro for now bc that dark mode was too dark :anguished:

--- a/heap/src/App.css
+++ b/heap/src/App.css
@@ -111,7 +111,7 @@
   height: 33px;
   width: 70px;
   /* color: #fff; */
-  color: oklch(var(--n));
+  color: oklch(var(--nc));
   /* background-color: #e2e9fd; */
   /* background-color: oklch(var(--nc)); */
   background-color: oklch(var(--pc));
