--- a/heap/src/components/css/Profile.css
+++ b/heap/src/components/css/Profile.css
@@ -1,4 +1,3 @@
-
 .banner {
   width: 80%;
   height: 30%;
@@ -15,7 +14,10 @@
 .profile {
   font-size: 40px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: oklch(var(--nc));
+}
+
+.profile > h1 {
+  color: oklch(var(--a));
 }
 
 .profile p {
